--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,10 @@
 				<div class="headerR">
 					<ul>
 						<li><a href="index.html">首页</a></li>
-						<li><a href="">公司概况</a></li>
-						<li><a href="">大药房</a></li>
-						<li><a href="">健康小常识</a></li>
-						<li class="headerActive"><a href="">联系我们</a></li>
+						<li><a href="about.html">公司概况</a></li>
+						<li><a href="product.html">大药房</a></li>
+						<li><a href="news.html">健康小常识</a></li>
+						<li class="headerActive"><a href="contact.html">联系我们</a></li>
 					</ul>
 				</div>
 			</div>
@@ -31,7 +31,7 @@
 		<div class="link_banner"></div>
 		
 		<!-- 服务热线 -->
-		<div>
+		<div class="fwrx">
 			<div class="w1440 link">
 				<div class="link_service">
 					服务热线<span>SERVICE</span><span></span><p></p>
@@ -69,7 +69,7 @@
 		</div>
 		
 		<!--百度地图容器-->
-		<div>
+		<div class="bddt">
 			<div class="wow animated slideInUp w1440 map">
 				<div style="width:100%;height:550px;border:#ccc solid 1px;" id="dituContent"></div>
 			</div>
