--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 				<div class="headerR">
 					<ul>
 						<li class="headerActive"><a href="">首页</a></li>
-						<li><a href="">公司概况</a></li>
-						<li><a href="">大药房</a></li>
-						<li><a href="">健康小常识</a></li>
+						<li><a href="about.html">公司概况</a></li>
+						<li><a href="product.html">大药房</a></li>
+						<li><a href="news.html">健康小常识</a></li>
 						<li><a href="contact.html">联系我们</a></li>
 					</ul>
 				</div>
