--- a/news.html
+++ b/news.html
@@ -16,11 +16,11 @@
 				<div class="headerL"><a href=""><img src="images/logo.png" alt=""></a></div>
 				<div class="headerR">
 					<ul>
-						<li class="headerActive"><a href="">首页</a></li>
-						<li><a href="">公司概况</a></li>
-						<li><a href="">大药房</a></li>
-						<li><a href="">健康小常识</a></li>
-						<li><a href="">联系我们</a></li>
+						<li><a href="index.html">首页</a></li>
+						<li><a href="about.html">公司概况</a></li>
+						<li><a href="product.html">大药房</a></li>
+						<li class="headerActive"><a href="news.html">健康小常识</a></li>
+						<li><a href="contact.html">联系我们</a></li>
 					</ul>
 				</div>
 			</div>
@@ -79,7 +79,7 @@
 			<div class="w1250 news">
 				<div class="news_con">
 					<div class="news_item01">
-						<a href="">
+						<a href="article.html">
 							<h2>催乳师天价难求！新妈妈自学简易催乳按摩法</h2>
 							<div class="article_info">
 								<span class="art-title">女性健康</span>
