--- a/product.html
+++ b/product.html
@@ -17,11 +17,11 @@
 				<div class="headerL"><a href=""><img src="images/logo.png" alt=""></a></div>
 				<div class="headerR">
 					<ul>
-						<li class="headerActive"><a href="">首页</a></li>
-						<li><a href="">公司概况</a></li>
-						<li><a href="">大药房</a></li>
-						<li><a href="">健康小常识</a></li>
-						<li><a href="">联系我们</a></li>
+						<li><a href="index.html">首页</a></li>
+						<li><a href="about.html">公司概况</a></li>
+						<li class="headerActive"><a href="">大药房</a></li>
+						<li><a href="news.html">健康小常识</a></li>
+						<li><a href="contact.html">联系我们</a></li>
 					</ul>
 				</div>
 			</div>
@@ -86,56 +86,56 @@
 			<div class="w1440 prd_list">
 				<ul class="wow animated slideInUp pharmacy_item01 prd_item01">
 					<li>
-						<a href="">
+						<a href="prddetail.html">
 							<div class="phar_item_img"><img src="images/phar_item01.jpg" alt=""></div>
 							<h4>感冒灵颗粒(999) </h4>
 							<p>3盒起10.8元/盒，5盒起9.8元/盒</p>
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a href="prddetail.html">
 							<div class="phar_item_img"><img src="images/phar_item02.jpg" alt=""></div>
 							<h4>感冒灵颗粒(999) </h4>
 							<p>3盒起10.8元/盒，5盒起9.8元/盒</p>
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a href="prddetail.html">
 							<div class="phar_item_img"><img src="images/phar_item03.jpg" alt=""></div>
 							<h4>感冒灵颗粒(999) </h4>
 							<p>3盒起10.8元/盒，5盒起9.8元/盒</p>
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a href="prddetail.html">
 							<div class="phar_item_img"><img src="images/phar_item04.jpg" alt=""></div>
 							<h4>感冒灵颗粒(999) </h4>
 							<p>3盒起10.8元/盒，5盒起9.8元/盒</p>
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a href="prddetail.html">
 							<div class="phar_item_img"><img src="images/phar_item01.jpg" alt=""></div>
 							<h4>感冒灵颗粒(999) </h4>
 							<p>3盒起10.8元/盒，5盒起9.8元/盒</p>
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a href="prddetail.html">
 							<div class="phar_item_img"><img src="images/phar_item02.jpg" alt=""></div>
 							<h4>感冒灵颗粒(999) </h4>
 							<p>3盒起10.8元/盒，5盒起9.8元/盒</p>
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a href="prddetail.html">
 							<div class="phar_item_img"><img src="images/phar_item03.jpg" alt=""></div>
 							<h4>感冒灵颗粒(999) </h4>
 							<p>3盒起10.8元/盒，5盒起9.8元/盒</p>
 						</a>
 					</li>
 					<li>
-						<a href="">
+						<a href="prddetail.html">
 							<div class="phar_item_img"><img src="images/phar_item04.jpg" alt=""></div>
 							<h4>感冒灵颗粒(999) </h4>
 							<p>3盒起10.8元/盒，5盒起9.8元/盒</p>
