--- a/article.html
+++ b/article.html
@@ -17,11 +17,11 @@
 				<div class="headerL"><a href=""><img src="images/logo.png" alt=""></a></div>
 				<div class="headerR">
 					<ul>
-						<li class="headerActive"><a href="">首页</a></li>
-						<li><a href="">公司概况</a></li>
-						<li><a href="">大药房</a></li>
-						<li><a href="">健康小常识</a></li>
-						<li><a href="">联系我们</a></li>
+						<li><a href="index.html">首页</a></li>
+						<li><a href="about.html">公司概况</a></li>
+						<li><a href="product.html">大药房</a></li>
+						<li><a href="news.html">健康小常识</a></li>
+						<li><a href="contact.html">联系我们</a></li>
 					</ul>
 				</div>
 			</div>
