--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
 	<script language="JavaScript" src="js/mag.js"></script>
 	<script language="JavaScript" src="js/wow.min.js"></script>
 	<script language="JavaScript" src="js/index.js"></script>
-	<script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
+	<script type="text/javascript" src="https://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
 	<script type="text/javascript">
 		//创建和初始化地图函数：
 		function initMap(){
@@ -199,7 +199,7 @@
 		}
 		//创建一个Icon
 		function createIcon(json){
-			var icon = new BMap.Icon("http://app.baidu.com/map/images/us_mk_icon.png", new BMap.Size(json.w,json.h),{imageOffset: new BMap.Size(-json.l,-json.t),infoWindowOffset:new BMap.Size(json.lb+5,1),offset:new BMap.Size(json.x,json.h)})
+			var icon = new BMap.Icon("https://app.baidu.com/map/images/us_mk_icon.png", new BMap.Size(json.w,json.h),{imageOffset: new BMap.Size(-json.l,-json.t),infoWindowOffset:new BMap.Size(json.lb+5,1),offset:new BMap.Size(json.x,json.h)})
 			return icon;
 		}
 	
